# zed

./: .gitignore  AGENTS.md  Justfile  pyproject.toml
crates/workspace/src/: dock.rs  multi_workspace.rs  status_bar.rs  workspace.rs
docs/: quick-build.zh-CN.md  zh-cn-local-i18n.md
i18n/catalog/: en-US.json
i18n/manifest/: ui-strings.json
i18n/prompts/translation/: TEMPLATE.md  zh-CN.md
i18n/prompts/translation/glossary/: zh-cn.md
i18n/reports/: README.md
i18n/translations/: zh-CN.json
script/: bundle-mac  bundle-windows.ps1
script/zed_i18n/tools/zed_i18n/: __init__.py  apply.py  audit.py  context_groups.py  extract.py  local_cli.py  rust_ast.py  rust_strings.py  translation_checks.py  translation_pipeline.py  validate.py  vscode_loc.py
